<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">beyza_ozan_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_continue">Continue</string>
<string name="lbl_beyza_ozan">Beyza Ozan</string>
<string name="msg_dictionary_tur">Dictionary (Turkish - English)</string>
<string name="lbl_name_surname">nAME SURNAME</string>
<string name="lbl_sellpage">sellpage</string>
<string name="msg_sell_new_produc">sell-new-product</string>
<string name="msg_account_informa">Account information</string>
<string name="lbl_300">300$</string>
<string name="lbl_description">Description</string>
<string name="msg_product_descrip">Product Description</string>
<string name="lbl_500">500$</string>
<string name="msg_traditional_tur">Traditional Turkish Carpet</string>
<string name="lbl_phone_number">PHONE NUMBER</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_password2">password</string>
<string name="lbl_e_mail">E-mail</string>
<string name="lbl_my_favorites">MY FAVORITES</string>
<string name="lbl_sign_in">Sign in</string>
<string name="msg_apple_watch_4">Apple watch - 40mm </string>
<string name="lbl_buypage">buypage</string>
<string name="lbl_item_1_title">Item-1 title</string>
<string name="lbl_beetbazaar">BeetBazaar</string>
<string name="msg_wooden_table">Wooden Table - 120x200</string>
<string name="lbl_10">10$</string>
<string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
<string name="lbl_name">Name</string>
<string name="msg_details_about_i">Details about item-1, it\u2019s attributes, sizes (if applicable) etc. </string>
<string name="msg_price_of_the_pr">Price of the product</string>
<string name="msg_the_product_is">The product is ready, lets go to market!</string>
<string name="msg_detailed_descri">Detailed description about the product, very very detailed</string>
<string name="lbl_seller">Seller</string>
<string name="msg_dark_polished_w">Dark polished wood table, 2 years old</string>
<string name="lbl_register">Register</string>
<string name="lbl_signin2">signin</string>
<string name="msg_products_that_y">Products that you\u2019re selling!</string>
<string name="lbl_item_2_title">Item-2 title</string>
<string name="lbl_surname">Surname</string>
<string name="lbl_search">search</string>
<string name="lbl_2">2$</string>
<string name="msg_second_hand_pro">Second Hand Product Marketing</string>
<string name="msg_password_regist">password-registered</string>
<string name="lbl_280">280$</string>
<string name="msg_search_a_produc">Search a Product </string>
<string name="lbl_my_products">My products</string>
<string name="lbl_e_mail2">E-MAIL</string>
<string name="msg_iphone_11_red">iphone 11 (red color)</string>
<string name="msg_detailed_descri2">Detailed description about the product.</string>
<string name="lbl_product_price">Product Price</string>
<string name="lbl_my_products2">MY PRODUCTS</string>
<string name="lbl_product_page">product-page</string>
<string name="lbl_profile_page">profile page</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="msg_faber_castell_p">Faber Castell Pencil</string>
<string name="lbl_product_name">Product Name</string>
<string name="lbl_password">Password</string>
<string name="lbl_05xxxxxxxxx">05XXXXXXXXX</string>
<string name="msg_short_descripti">Short description about the product</string>
<string name="msg_welcome_to_beet">Welcome to BeetBazaar!</string>
<string name="lbl_delete_account">Delete Account</string>
<string name="msg_ahmet_c_neyd_ta">Ahmet Cüneyd Tantuğ</string>
<string name="lbl_address">Address</string>
<string name="lbl_item_3_title">Item-3 title</string>
<string name="msg_tantu_itu_edu">tantuğ@itu.edu.tr</string>
<string name="msg_password_unregi">password-unregistered</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>
